# graph_reader_api

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements-tests.txt  requirements.txt
.github/workflows/: docker-publish.yml  tests.yml
scripts/: pp-verify.sh  test_mcp_auth.py
src/graph_reader_api/: app.py  config.py
src/graph_reader_api/auth/: dependencies.py
src/graph_reader_api/routers/: apikey.py  community.py  entity.py  search.py
test_graph_fixture/entities/: shard_0.jsonl
test_graph_fixture/logs/: entity_updates.jsonl
tests/: conftest.py
tests/postman/: graph_reader_api.postman_collection.json  kg_api.postman_collection.json
tests/unit/: test_apikey.py  test_app.py  test_community.py  test_dependencies.py  test_entity.py  test_search.py
